--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="GameDefine.h" />
   </ItemGroup>
   <ItemGroup>
-    <Media Include="..\..\..\..\Downloads\Hammer 9.wav" />
+    <Media Include="..\..\..\..\Downloads\Hammer_9.wav" />
     <Media Include="..\..\..\..\Downloads\게임코인획득\코인획득20.wav" />
     <Media Include="..\..\..\..\Downloads\게임코인획득\코인획득실패24.wav" />
     <Media Include="..\..\..\..\Downloads\키보드5.wav" />
