--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -31,6 +31,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <Media Include="..\..\..\..\Downloads\Hammer_9.wav">
+      <Filter>리소스 파일</Filter>
+    </Media>
     <Media Include="..\..\..\..\Downloads\키보드5.wav">
       <Filter>리소스 파일</Filter>
     </Media>
@@ -38,9 +41,6 @@
       <Filter>리소스 파일</Filter>
     </Media>
     <Media Include="..\..\..\..\Downloads\게임코인획득\코인획득실패24.wav">
-      <Filter>리소스 파일</Filter>
-    </Media>
-    <Media Include="..\..\..\..\Downloads\Hammer 9.wav">
       <Filter>리소스 파일</Filter>
     </Media>
   </ItemGroup>
