--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -40,7 +40,7 @@
     <Media Include="..\..\..\..\Downloads\게임코인획득\코인획득실패24.wav">
       <Filter>리소스 파일</Filter>
     </Media>
-    <Media Include="..\..\..\..\Downloads\Hammer 9.wav">
+    <Media Include="..\..\..\..\OneDrive\Desktop\3st\Mixdown\hammer1.wav">
       <Filter>리소스 파일</Filter>
     </Media>
   </ItemGroup>
